<?xml version="1.0"?>
<package format="2">
  <name>rosjava_tf_core</name>
  <version>0.2.3</version>
  <description>The rosjava_tf_core package</description>

  <maintainer email="lruegeme@techfak.de">Leroy ruegemer</maintainer>

  <license>Apache 2.0</license>

  <author email="nick@heuristiclabs.com">Nick Armstrong-Crews</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>tf</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
